# minisqlrustproject

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.db_data/: tabledata_34  tabledata_35  tabledata_36  tabledata_37  tabledata_38  tabledata_39  tabledata_40  tabledata_41  tabledata_42  tabledata_43  tabledata_44  tabledata_45  tabledata_46  tabledata_47  tabledata_48  tabledata_49
client_sql/: Cargo.toml
client_sql/src/: lib.rs  main.rs
server_sql/: Cargo.toml
server_sql/src/: database.rs  index.rs  main.rs  stream_processor.rs
server_sql/src/parser/: mod.rs  patterns.rs  utils.rs
src/: allocator.rs  data.rs  database.rs  error.rs  main.rs  parser.rs  stream_processor.rs
src/parser/: macros.rs  mod.rs  patterns.rs  utils.rs
