[package]
name = "minisql"
version = "0.1.0"
authors = ["Marek Vrbka <469025@mail.muni.cz>", "Peter Jaško <xjasko2@fi.muni.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.130", features = ["derive"] }
ron = "0.7"
atomic-counter = "1.0.1"
regex = "1"
lazy_static = "1.4"
